[package]
name       = "rosu-render"
version    = "0.1.0"
authors    = ["MaxOhn <ohn.m@hotmail.de>"]
edition    = "2021"
readme     = "README.md"
repository = "https://github.com/MaxOhn/rosu-render"
license    = "MIT"

[dependencies]
form_urlencoded = { version = "1.2" }
futures = { version = "0.3", default-features = false }
hyper = { version = "0.14", default-features = false, features = ["client", "http1", "http2", "runtime"] }
hyper-rustls = { version = "0.24", default-features = false, optional = true, features = ["http1", "http2"] }
hyper-tls = { version = "0.5", default-features = false, optional = true }
hyper-trust-dns = { version = "0.5", default-features = false, optional = true }
itoa = { version = "1.0" }
leaky-bucket = { version = "1.0" }
pin-project = "1.1.0"
rand = { version = "0.8", default-features = false, features = ["std_rng", "std"] }
rust_socketio = { git = "https://github.com/MaxOhn/rust-socketio", branch = "custom", features = ["async"] }
ryu = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_urlencoded = { version = "0.7" }
thiserror = { version = "1.0" }
time = { version = "0.3", features = ["formatting", "parsing"] }
tracing = { version = "0.1", default-features = false, features = ["std", "attributes"] }

[dev-dependencies]
tokio = { version = "1.0", default-features = false, features = ["fs", "macros", "rt", "sync"] }

[features]
default = ["rustls-webpki-roots"]
native = ["dep:hyper-tls"]
rustls-native-roots = ["dep:hyper-rustls", "hyper-rustls?/native-tokio"]
rustls-webpki-roots = ["dep:hyper-rustls", "hyper-rustls?/webpki-tokio"]
trust-dns = ["dep:hyper-trust-dns"]
