[package]
name          = "rosu-render"
version       = "0.4.1"
authors       = ["MaxOhn <ohn.m@hotmail.de>"]
edition       = "2021"
description   = "An o!rdr wrapper to render osu! replays"
readme        = "README.md"
repository    = "https://github.com/MaxOhn/rosu-render"
license       = "MIT"
keywords      = ["ordr", "osu"]
documentation = "https://docs.rs/rosu-render"

[dependencies]
bytes = { version = "1.10.0" }
fastrand = { version = "2.3.0", default-features = false, features = ["std"] }
form_urlencoded = { version = "1.2" }
futures = { version = "0.3", default-features = false }
http = { version = "1.2.0", default-features = false }
http-body-util = { version = "0.1.2", default-features = false }
hyper = { version = "1.6.0", default-features = false }
hyper-util = { version = "0.1.10", default-features = false, features = ["client-legacy", "http1", "http2", "tokio"] }
hyper-rustls = { version = "0.27.5", default-features = false, optional = true, features = ["http1", "http2"] }
hyper-tls = { version = "0.6.0", default-features = false, optional = true, features = ["alpn"] }
hyper-hickory = { version = "0.7", default-features = false, optional = true }
itoa = { version = "1.0" }
leaky-bucket = { version = "1.0" }
pin-project = { version = "1.1" }
rustls = { version = "0.23.22", default-features = false, optional = true }
ryu = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_urlencoded = { version = "0.7" }
thiserror = { version = "2.0.3" }
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1.0", default-features = false, features = ["net"] }
tokio-websockets = { version = "0.11.1", default-features = false, features = ["client", "fastrand", "sha1_smol", "simd"] }
tracing = { version = "0.1", default-features = false, features = ["std", "attributes"] }
url = { version = "2.0" }

[dev-dependencies]
tokio = { version = "1.0", default-features = false, features = ["fs", "macros", "rt-multi-thread", "sync"] }

[features]
default = ["rustls-webpki-roots", "rustls-ring"]
hickory = ["dep:hyper-hickory"]
native-tls = ["dep:hyper-tls", "tokio-websockets/native-tls", "tokio-websockets/openssl"]
rustls-platform-verifier = ["dep:hyper-rustls", "dep:rustls", "hyper-rustls?/rustls-platform-verifier", "tokio-websockets/rustls-platform-verifier"]
rustls-native-roots = ["dep:hyper-rustls", "dep:rustls", "hyper-rustls?/native-tokio", "tokio-websockets/rustls-native-roots"]
rustls-webpki-roots = ["dep:hyper-rustls", "dep:rustls", "hyper-rustls?/webpki-tokio", "tokio-websockets/rustls-webpki-roots"]
rustls-ring = ["hyper-rustls?/ring", "tokio-websockets/ring"]
rustls-aws_lc_rs = ["hyper-rustls?/aws-lc-rs", "tokio-websockets/aws_lc_rs"]
rustls-aws-lc-rs = ["rustls-aws_lc_rs"] # Alias for convenience, underscores are preferred in the rustls stack